--- a/css/maxwidth720.css
+++ b/css/maxwidth720.css
@@ -11,6 +11,7 @@
 		text-align: center;
 		font-size: 0.8rem;
 		margin: 10px;
+		overflow-wrap: break-word;
 	}
 }
 
